Fortran: dimensions of an array have to be non-negative

gcc/fortran/ChangeLog:

	PR fortran/103610
	* array.c (spec_dimen_size): Fix simplification of SHAPE:
	dimensions must be non-negative.

gcc/testsuite/ChangeLog:

	PR fortran/103610
	* gfortran.dg/shape_11.f90: New test.